don't crash when scrolling in input line, fdo#46975

Change-Id: Ia4a30d9f06301c73dafdcc316eb6ad539dc95858